--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="main-content">
     <div class="quote-area">
       <i class="fas fa-quote-left"></i>
-          <p id="quote">Never give up because you never know if the next try is going to be the one that works  me.</p>
+          <p id="quote">Either learn to save money or learn to earn.</p>
       <i class="fas fa-quote-right"></i>
     </div>
     <div class="author">
